--- a/styles/_variables.scss
+++ b/styles/_variables.scss
@@ -7,6 +7,15 @@ $nav-bar-backgound-color-hover: rgb(0, 90, 105);
 $nav-bar-button-color: white;
 $nav-bar-button-color-hover: white;
 
+$legend-font-size: 18px;
+$legend-icon-width: 20px;
+$legend-icon-height: 20px;
+
 $cell-width: 30px;
 $cell-height: 30px;
 $cell-border-color: rgba(128, 128, 128, 0.5);
+
+$wall-background-color: black;
+$unexplored-background-color: red;
+$explored-background-color: cyan;
+$best-path-background-color: yellow;
