--- a/styles/css/styles.css
+++ b/styles/css/styles.css
@@ -76,7 +76,6 @@
 }
 
 #grid-container {
-  margin-top: 50px;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -110,5 +109,67 @@
           align-items: center;
   font-size: 25px;
   /* To size the Start and End icon */
+}
+
+#legend-container {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  margin: 20px 0px;
+}
+
+#legend-container #legend {
+  font-family: "Ubuntu", sans-serif;
+  font-size: 18px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
+}
+
+#legend-container #legend .legend-field {
+  margin: 0px 30px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+#legend-container #legend .legend-field .icon {
+  width: 20px;
+  height: 20px;
+  border: 1px solid rgba(128, 128, 128, 0.5);
+}
+
+#legend-container #legend .legend-field .description {
+  margin-left: 5px;
+}
+
+#legend-container #legend .legend-field #wall {
+  background-color: black;
+}
+
+#legend-container #legend .legend-field #unexplored {
+  background-color: red;
+}
+
+#legend-container #legend .legend-field #explored {
+  background-color: cyan;
+}
+
+#legend-container #legend .legend-field #best-path {
+  background-color: yellow;
 }
 /*# sourceMappingURL=styles.css.map */
