--- a/styles/_legend.scss
+++ b/styles/_legend.scss
@@ -14,6 +14,7 @@
       display: flex;
       flex-direction: row;
       align-items: center;
+      font-size: 20px;
 
       .icon {
         width: $legend-icon-width;
@@ -23,6 +24,7 @@
 
       .description {
         margin-left: 5px;
+        font-size: $legend-font-size;
       }
 
       #wall {
