--- a/styles/css/styles.css
+++ b/styles/css/styles.css
@@ -69,7 +69,8 @@
   margin-left: 5px;
 }
 
-#nav-bar .nav-bar-button:hover {
+#nav-bar .nav-bar-button:hover,
+#nav-bar #visualize {
   color: white;
   background-color: #005a69;
   cursor: pointer;
@@ -87,7 +88,6 @@
 #grid-container #grid {
   display: -ms-grid;
   display: grid;
-  background-color: red;
   -ms-grid-columns: (30px)[45];
       grid-template-columns: repeat(45, 30px);
 }
@@ -95,7 +95,6 @@
 #grid-container #grid .cell {
   height: 30px;
   width: 30px;
-  margin: 0px;
   background-color: white;
   border: 1px solid rgba(128, 128, 128, 0.5);
   display: -webkit-box;
@@ -145,6 +144,7 @@
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
+  font-size: 20px;
 }
 
 #legend-container #legend .legend-field .icon {
@@ -155,6 +155,7 @@
 
 #legend-container #legend .legend-field .description {
   margin-left: 5px;
+  font-size: 18px;
 }
 
 #legend-container #legend .legend-field #wall {
