--- a/styles/_variables.scss
+++ b/styles/_variables.scss
@@ -6,6 +6,7 @@ $nav-bar-backgound-color: rgb(35, 35, 35);
 $nav-bar-backgound-color-hover: rgb(0, 90, 105);
 $nav-bar-button-color: white;
 $nav-bar-button-color-hover: white;
+$visualize-background-color-hover: rgb(220, 100, 0);
 
 $legend-font-size: 18px;
 $legend-icon-width: 20px;
