--- a/styles/_variables.scss
+++ b/styles/_variables.scss
@@ -17,6 +17,6 @@ $cell-height: 30px;
 $cell-border-color: rgba(128, 128, 128, 0.5);
 
 $wall-background-color: black;
-$unexplored-background-color: red;
+$unexplored-background-color: white;
 $explored-background-color: cyan;
 $best-path-background-color: yellow;
