--- a/styles/_legend.scss
+++ b/styles/_legend.scss
@@ -42,6 +42,10 @@
         margin-top: -4px;
       }
 
+      input[type="range"]:hover::-webkit-slider-thumb {
+        background: $nav-bar-backgound-color-hover;
+      }
+
       input[type="range"]:focus {
         outline: none;
       }
