--- a/styles/css/styles.css
+++ b/styles/css/styles.css
@@ -291,16 +291,16 @@
 
 @-webkit-keyframes explored {
   0% {
-    background-color: blue;
-  }
-  25% {
-    background-color: yellow;
+    background-color: black;
+    -webkit-transform: scale(0.2);
+            transform: scale(0.2);
+    border-radius: 100%;
   }
   50% {
-    background-color: red;
-  }
-  75% {
-    background-color: black;
+    background-color: blue;
+    -webkit-transform: scale(0.5);
+            transform: scale(0.5);
+    border-radius: 100%;
   }
   100% {
     background-color: cyan;
@@ -309,19 +309,43 @@
 
 @keyframes explored {
   0% {
-    background-color: blue;
-  }
-  25% {
-    background-color: yellow;
+    background-color: black;
+    -webkit-transform: scale(0.2);
+            transform: scale(0.2);
+    border-radius: 100%;
   }
   50% {
-    background-color: red;
-  }
-  75% {
-    background-color: black;
+    background-color: blue;
+    -webkit-transform: scale(0.5);
+            transform: scale(0.5);
+    border-radius: 100%;
   }
   100% {
     background-color: cyan;
+  }
+}
+
+@-webkit-keyframes path {
+  0% {
+    -webkit-transform: scale(1.5);
+            transform: scale(1.5);
+    background-color: orange;
+  }
+  100% {
+    -webkit-transform: scale(1);
+            transform: scale(1);
+  }
+}
+
+@keyframes path {
+  0% {
+    -webkit-transform: scale(1.5);
+            transform: scale(1.5);
+    background-color: orange;
+  }
+  100% {
+    -webkit-transform: scale(1);
+            transform: scale(1);
   }
 }
 
@@ -331,7 +355,12 @@
 }
 
 #grid .explored {
-  -webkit-animation: explored 3s ease-out;
-          animation: explored 3s ease-out;
+  -webkit-animation: explored 1s ease;
+          animation: explored 1s ease;
+}
+
+#grid .path {
+  -webkit-animation: path 1s ease;
+          animation: path 1s ease;
 }
 /*# sourceMappingURL=styles.css.map */
