--- a/styles/_animations.scss
+++ b/styles/_animations.scss
@@ -1,3 +1,5 @@
+@import "./variables";
+
 @keyframes wall {
   0% {
     transform: scale(1);
@@ -33,6 +35,23 @@
   }
 }
 
+@keyframes visualize {
+  0% {
+    background-color: $visualize-background-color-hover;
+  }
+  33% {
+    background-color: red;
+  }
+  100% {
+    background-color: $visualize-background-color-hover;
+  }
+}
+
+.visualize-animation {
+  animation: visualize 2s ease;
+  animation-iteration-count: infinite;
+}
+
 @keyframes path {
   0% {
     transform: scale(1.5);
@@ -40,6 +59,7 @@
   }
   100% {
     transform: scale(1);
+    border: 1px solid grey;
   }
 }
 
