--- a/styles/css/styles.css
+++ b/styles/css/styles.css
@@ -202,6 +202,8 @@
 
 #legend-container #legend .legend-field input[type="range"]:hover::-webkit-slider-thumb {
   background: #005a69;
+  cursor: -webkit-grab;
+  cursor: grab;
 }
 
 #legend-container #legend .legend-field input[type="range"]:focus {
@@ -349,23 +351,17 @@
   }
 }
 
-.visualize-animation {
-  -webkit-animation: visualize 2s ease;
-          animation: visualize 2s ease;
-  -webkit-animation-iteration-count: infinite;
-          animation-iteration-count: infinite;
-}
-
 @-webkit-keyframes path {
   0% {
     -webkit-transform: scale(1.5);
             transform: scale(1.5);
     background-color: orange;
+    border: 1px solid rgba(128, 128, 128, 0.5);
   }
   100% {
     -webkit-transform: scale(1);
             transform: scale(1);
-    border: 1px solid grey;
+    border: 1px solid rgba(128, 128, 128, 0.5);
   }
 }
 
@@ -374,12 +370,20 @@
     -webkit-transform: scale(1.5);
             transform: scale(1.5);
     background-color: orange;
+    border: 1px solid rgba(128, 128, 128, 0.5);
   }
   100% {
     -webkit-transform: scale(1);
             transform: scale(1);
-    border: 1px solid grey;
+    border: 1px solid rgba(128, 128, 128, 0.5);
   }
+}
+
+.visualize-animation {
+  -webkit-animation: visualize 2s ease;
+          animation: visualize 2s ease;
+  -webkit-animation-iteration-count: infinite;
+          animation-iteration-count: infinite;
 }
 
 #grid .wall {
