Fixed Drop on Wall

--- a/styles/_grid.scss
+++ b/styles/_grid.scss
@@ -28,5 +28,15 @@
     .path {
       background-color: $best-path-background-color;
     }
+
+    .start,
+    .end {
+      cursor: move;
+      cursor: grab;
+
+      &:active {
+        cursor: grabbing;
+      }
+    }
   }
 }
