--- a/styles/css/styles.css
+++ b/styles/css/styles.css
@@ -440,9 +440,143 @@
   position: fixed;
   border-radius: 8px;
   right: 10px;
+  bottom: 2px;
 }
 
 #outer-weight-popup #weight-popup i {
   margin: 0px 10px;
+}
+
+#modal {
+  background-color: rgba(0, 0, 0, 0.6);
+  width: 100%;
+  height: 100%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  position: fixed;
+  z-index: 10;
+  font-family: "Ubuntu", cursive;
+  font-size: 32px;
+}
+
+#modal #modal-content {
+  background-color: white;
+  width: 800px;
+  height: 700px;
+  /*display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;*/
+  position: relative;
+}
+
+#modal #modal-content .outer-modal-page {
+  display: none;
+  width: 100%;
+  height: 100%;
+}
+
+#modal #modal-content .outer-modal-page .modal-page {
+  width: 100%;
+  height: 100%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  text-align: center;
+}
+
+#modal #modal-content .outer-modal-page .modal-page img {
+  height: 400px;
+  max-width: 100%;
+}
+
+#modal #modal-content .outer-modal-page .modal-page .modal-text {
+  margin: 40px 0px;
+  background-color: #232323;
+  color: white;
+  width: 100%;
+  height: 80px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+}
+
+#modal #modal-content #modal-buttons {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-pack: distribute;
+      justify-content: space-around;
+  width: 100%;
+  position: absolute;
+  bottom: 10px;
+}
+
+#modal #modal-content #modal-buttons .modal-button {
+  background-color: #232323;
+  color: white;
+  padding: 10px 20px;
+  width: 300px;
+  text-align: center;
+  -webkit-transition: 0.5s;
+  transition: 0.5s;
+  border-radius: 8px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+}
+
+#modal #modal-content #modal-buttons .modal-button:hover {
+  cursor: pointer;
+  letter-spacing: 2px;
+  background-color: #005a69;
+  font-weight: bold;
+}
+
+#modal #modal-content #modal-buttons .modal-button i {
+  margin: 0px 5px;
+}
+
+#modal #modal-content #close {
+  position: absolute;
+  top: 0px;
+  right: 0px;
+  -webkit-transition: 0.5s;
+  transition: 0.5s;
+  height: 50px;
+  width: 50px;
+  font-size: 40px;
+  text-align: center;
+}
+
+#modal #modal-content #close:hover {
+  cursor: pointer;
+  color: red;
 }
 /*# sourceMappingURL=styles.css.map */
