--- a/styles/_modal.scss
+++ b/styles/_modal.scss
@@ -11,28 +11,21 @@
   font-size: 32px;
 
   #modal-content {
-    background-color: rgba(255, 255, 255, 1);
-    //border-radius: 8px;
+    background-color: white;
+    box-shadow: 10px 10px 10px rgba(35, 35, 35, 0.8);
     width: 800px;
     height: 700px;
-    /*display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;*/
+
     position: relative;
-    //padding: 20px;
+    padding: 20px;
     .outer-modal-page {
       display: none;
       width: 100%;
       height: 100%;
       .modal-page {
-        //background-color: blue;
-        width: 100%;
-        height: 100%;
         display: flex;
         flex-direction: column;
         align-items: center;
-
         text-align: center;
         img {
           height: 400px;
@@ -56,7 +49,7 @@
       justify-content: space-around;
       width: 100%;
       position: absolute;
-      bottom: 10px;
+      bottom: 20px;
 
       .disabled {
         pointer-events: none;
@@ -90,13 +83,14 @@
 
     #close {
       position: absolute;
-      top: 0px;
-      right: 0px;
+      top: -20px;
+      right: 4px;
       transition: 0.5s;
       //background-color: blue;
-      height: 50px;
-      width: 50px;
-      font-size: 40px;
+      //height: 70px;
+      //width: 70px;
+      display: block;
+      font-size: 72px;
       text-align: center;
 
       &:hover {
