--- a/styles/css/styles.css
+++ b/styles/css/styles.css
@@ -468,13 +468,12 @@
 
 #modal #modal-content {
   background-color: white;
+  -webkit-box-shadow: 10px 10px 10px rgba(35, 35, 35, 0.8);
+          box-shadow: 10px 10px 10px rgba(35, 35, 35, 0.8);
   width: 800px;
   height: 700px;
-  /*display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;*/
   position: relative;
+  padding: 20px;
 }
 
 #modal #modal-content .outer-modal-page {
@@ -484,8 +483,6 @@
 }
 
 #modal #modal-content .outer-modal-page .modal-page {
-  width: 100%;
-  height: 100%;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -529,7 +526,7 @@
       justify-content: space-around;
   width: 100%;
   position: absolute;
-  bottom: 10px;
+  bottom: 20px;
 }
 
 #modal #modal-content #modal-buttons .disabled {
@@ -570,13 +567,12 @@
 
 #modal #modal-content #close {
   position: absolute;
-  top: 0px;
-  right: 0px;
+  top: -20px;
+  right: 4px;
   -webkit-transition: 0.5s;
   transition: 0.5s;
-  height: 50px;
-  width: 50px;
-  font-size: 40px;
+  display: block;
+  font-size: 72px;
   text-align: center;
 }
 
