--- a/styles/css/styles.css
+++ b/styles/css/styles.css
@@ -582,4 +582,33 @@
   cursor: pointer;
   color: red;
 }
+
+#outer-stats-popup {
+  display: none;
+}
+
+#outer-stats-popup #stats-popup {
+  background-color: #dc6400;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
+  font-family: "Ubuntu", cursive;
+  font-size: 24px;
+  padding: 8px;
+  width: 600px;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  position: fixed;
+  border-radius: 8px;
+  left: 10px;
+  bottom: 2px;
+}
 /*# sourceMappingURL=styles.css.map */
