Added Node.js launch

--- a/views/index.html
+++ b/views/index.html
@@ -20,10 +20,10 @@
     ></script>
 
     <!-- My Stylesheet -->
-    <link rel="stylesheet" href="./styles/css/styles.css" />
+    <link rel="stylesheet" href="styles.css" />
 
     <!-- Favicon -->
-    <link rel="shortcut icon" type="image/png" href="/favicon.png" />
+    <link rel="shortcut icon" type="image/png" href="favicon.png" />
 
     <title>Path Visualizer</title>
   </head>
@@ -34,7 +34,7 @@
         <div class="outer-modal-page">
           <div class="modal-page">
             <div class="modal-text">Drag the mouse to add walls</div>
-            <img src="./images/drag walls.JPG" alt="" />
+            <img src="drag walls.JPG" alt="" />
           </div>
         </div>
         <div class="outer-modal-page">
@@ -42,7 +42,7 @@
             <div class="modal-text">
               Press <b>&nbsp;W&nbsp;</b> and drag the mouse to add weights
             </div>
-            <img src="./images/drag weights.JPG" alt="" />
+            <img src="drag weights.JPG" alt="" />
           </div>
         </div>
         <div class="outer-modal-page">
@@ -50,13 +50,13 @@
             <div class="modal-text">
               Choose your favorite path finding algorithm
             </div>
-            <img src="./images/algorithm.JPG" alt="" />
+            <img src="algorithm.JPG" alt="" />
           </div>
         </div>
         <div class="outer-modal-page">
           <div class="modal-page">
             <div class="modal-text">Click Visualize!</div>
-            <img src="./images/visualize.JPG" alt="" />
+            <img src="visualize.JPG" alt="" />
           </div>
         </div>
 
@@ -188,7 +188,7 @@
         <div id="stats-popup"></div>
       </div>
     </div>
-    <script src="./scripts/script.js" type="module"></script>
+    <script src="script.js" type="module"></script>
 
     <!-- jQuery CDN -->
     <script
