--- a/views/index.html
+++ b/views/index.html
@@ -97,7 +97,7 @@
           </div>
           <div class="dropdown-menu">
             <div class="nav-bar-button" id="recursive">Recursive</div>
-            <div class="nav-bar-button">Maze 2</div>
+            <div class="nav-bar-button" id="random">Random</div>
           </div>
         </div>
 
